[update] comments api
